--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build -o dist",
+    "build": "next build",
     "tauri": "tauri"
   },
   "dependencies": {
