--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@carbon/ibm-security": "^2.13.12",
     "@carbon/react": "^1.17.0",
     "@tauri-apps/api": "^1.1.0",
     "@types/carbon-components-react": "^7.55.2",
